Redmine Issue 863 PURPOSE: Browse Specimens Styling DESCRIPTION: responsive wrap

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2458,7 +2458,7 @@ and also iPads specifically.
 	overflow:scroll;
 	}
 	ol.flow-manyislandgroups {
-	height: 5000px;
+	height: 6000px;
 	column-count: 2;
 	overflow:scroll;
 	}
